<resources>
    <string name="app_name">Basketball Labo 2</string>
    <string name="reset">RESET</string>
    <string name="_2">+2</string>
    <string name="_3">+3</string>
    <string name="_1">+1</string>
    <string name="_0">0</string>
    <string name="team_b">Team B</string>
    <string name="team_a">Team A</string>
    <string name="name_author">Author: Douglas Antonio Hernandez Torres</string>
</resources>
